Fix scrollbars showing up on unscrollable div on Mac

--- a/src/styles/help.css
+++ b/src/styles/help.css
@@ -94,7 +94,7 @@
 }
 
 .editor-scroll-box {
-  overflow: scroll;
+  overflow: auto;
   max-height: 70vh;
   max-height: calc(100vh - 10em);
 }
